--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <!-- end css icon -->
 
     <title>My Portofolio-Achmad Ghazi</title>
+
   </head>
+
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- About profile -->
   <section class="jumbotron container-xxl text-center">
-    <img src="profile.jpg" alt="ACHMAD GHAZI ALGHIFARI" width="200px" class="rounded-circle img-thumbnail" style="margin-top: 2rem">
+    <img src="./image/profile.jpg" alt="ACHMAD GHAZI ALGHIFARI" width="200px" class="rounded-circle img-thumbnail" style="margin-top: 2rem">
     <h1 class="display-6">ACHMAD GHAZI ALGHIFARI</h1>
-    <!-- <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
   </section>
     <!-- End about profile -->
 
@@ -86,7 +87,7 @@
           <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
             <div class="col">
               <div class="card shadow">
-                <img src="1.jpg" class="card-img-top" alt="...">
+                <img src="./image/1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -95,7 +96,7 @@
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="2.jpg" class="card-img-top" alt="...">
+                <img src="./image/2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -104,7 +105,7 @@
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="5.jpg" class="card-img-top" alt="...">
+                <img src="./image/5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -113,7 +114,7 @@
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="4.jpg" class="card-img-top" alt="...">
+                <img src="./image/4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -122,7 +123,7 @@
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="6.jpg" class="card-img-top" alt="...">
+                <img src="./image/6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -190,21 +191,21 @@
               </div>
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="7.jpg" class="d-block w-100" style="width: 100%;height: 30rem;" alt="...">
+                    <img src="./image/7.jpg" class="d-block w-100" style="width: 100%;height: 30rem;" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                       </div>
                   </div>
                 <div class="carousel-item">
-                  <img src="8.jpg" style="width: 100%;height: 30rem;" class="d-block w-100" alt="...">
+                  <img src="./image/8.jpg" style="width: 100%;height: 30rem;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
                       <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="9.jpg" style="width: 100%;height: 30rem;" class="d-block w-100" alt="...">
+                  <img src="./image/9.jpg" style="width: 100%;height: 30rem;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Third slide label</h5>
                       <p>Some representative placeholder content for the third slide.</p>
