mengubah judul kartu projek

--- a/index.html
+++ b/index.html
@@ -87,45 +87,45 @@
           <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
             <div class="col">
               <div class="card shadow">
-                <img src="./image/1.jpg" class="card-img-top" alt="...">
+                <img src="./image/1.jpg" class="card-img-top" alt="shilouette image">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Shilouette sunset</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="./image/2.jpg" class="card-img-top" alt="...">
+                <img src="./image/2.jpg" class="card-img-top" alt="lazy cat">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">cat sleep</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="./image/5.jpg" class="card-img-top" alt="...">
+                <img src="./image/5.jpg" class="card-img-top" alt="river nature">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Pemandangan kali CBL</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
               </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="./image/4.jpg" class="card-img-top" alt="...">
+                <img src="./image/4.jpg" class="card-img-top" alt="Pemandangan gelap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Petani bekerja</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
-                <img src="./image/6.jpg" class="card-img-top" alt="...">
+                <img src="./image/6.jpg" class="card-img-top" alt="hamparan bunga">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Sunrise dibawah hamparan bunga</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               </div>
